feat(batsi-ng): migrate detail page
