# batsi-ng/projects/batsi-ng-app/src/app/routes/train-details/components/train-time-table-info/train-time-table-info-reported-scheduled/train-time-table-info-reported-scheduled.component.ts
@@ -1,0 +1,17 @@
+import { Component, input } from '@angular/core';
+import { NgClass } from '@angular/common';
+
+@Component({
+  selector: 'batsi-ng-train-time-table-info-reported-scheduled',
+  templateUrl: './train-time-table-info-reported-scheduled.component.html',
+  styleUrls: ['./train-time-table-info-reported-scheduled.component.scss'],
+  imports: [NgClass],
+})
+export class TrainTimeTableInfoReportedScheduledComponent {
+  //#region Inputs
+  readonly label = input<string | undefined>();
+
+  readonly reported = input.required<number | undefined>();
+  readonly scheduled = input.required<number | undefined>();
+  //#endregion
+}
